improved AI readiness - initial draft documents